add new classes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <title>FindAFriend</title>
 </head>
 <body>
-  <div class="hero-wrapper">
-    <div class="hero">
+  <div class="container">
+    <div class="hero_container">
       <nav class="menu">
         <input type="checkbox" class="menu__trigger">
         <img class="menu__lines" src="./assets/menu.svg">
