--- a/index.html
+++ b/index.html
@@ -77,8 +77,40 @@
       </div>
     </div>
   </div>
+  <main>
+    <section class="container_box">
+      <div class="box_img_desktop"></div>
+      <div>
+        <div class="box">
+          <h1>Um app não, uma caixinha de amigos...</h1>
+        </div>
+        <div class="container_first_box">
+          <div class="box_content">
+            <p class="box_icon">🐕</p>
+            <p class="box_text">
+              O <span>FindAFriend</span> é um produto desenvolvido para você encontrar
+              o animal de estimação ideal ao seu estilo de vida!
+            </p>
+          </div>
+          <div class="box_content">
+            <p class="box_icon">🐈</p>
+            <p class="box_text">
+              <span>ONGs</span> cadastram os bichinhos disponíveis para adoção informando 
+              características como: porte, nível de energia, nível de independência, sociabilidade e gênero.
+            </p>
+          </div>
+        </div>
+        <div class="container_second_box">
+          <p class="box_icon">🦮</p>
+          <p class="box_text">
+            <span>Filtre os bichinhos</span> de acordo com suas preferências e lifestyle. Depois é só entrar em contato com a ONG para 
+            agendar uma visita e conhecer pessoalmente seu <span>match perfeito!</span> 
+          </p>
+        </div>
+      </div>
+      <div class="box_img"></div>
+    </section>
   </main>
   
-  <script src="./main.js"></script>
 </body>
 </html>
